2010-12-04  Jakob <jakob@pipefour.org>

	* new elvis: pasearch.

2010-12-08  Ian Beckwith  <ianb@erislabs.net>

	* arxiv: Thanks to MT <mt_void@warpmail.net> for patch that fixes:
	  1. Search queries with more than two terms would fail, e.g.
	    'supermassive black hole'.
	  2. Full text search was broken, it works now.
	  3. Enhancement: quoting the query now does an exact string match.

2010-10-29  Ian Beckwith  <ianb@erislabs.net>

	* wayback: advanced search is broken, rip out all
	  options and use basic search.
	* w3_url_escape: add /g to '/'->'%2F' replacement.
	* uzbl_load_url_from_surfraw: use @AWK@ to pick up
	  ./configure's choice of awk implementation.

2010-10-28  Ian Beckwith  <ianb@erislabs.net>

	* Support -local-help, --local-help or -lh to get elvi-specific
	  help without displaying the global options. This works for
	  all elvi and the main surfraw script.
	* google, duckduckgo, opensearch, wayback: tweak overbroad
	  option parsing so it doesn't interfere with -lh.
	* Support -h as a synonym for -help.

2010-10-25  Ian Beckwith  <ianb@erislabs.net>

	* new elvi: scirus, scitopia, worldwidescience.
	* yahoo: reduced query string to just p and n options.
	* openbsd: support -misc and -tech. Thanks to
	  Sunil Nimmagadda for the patch.
	* removed cddb: gracenote made the "hard decision"
	  to remove the website search. sigh.
	* removed altavista: is now just a front-end to yahoo.
	* removed fast: another yahoo front-end.
	* imdb: fix test.
	* javasun: oracleized URLs.
	* w3link: fixed URL.

2010-08-22  Jameson Rollins <jrollins@finestructure.net>

	* surfraw.IN: Improve listing of elvi.

2010-08-20  James Rowe  <jnrowe@gmail.com>

	* new elvi: ads.  Thanks to Jameson Rollins.

2010-07-02  Ian Beckwith  <ianb@erislabs.net>

	* new elvi: yandex. Thanks to Uspenskiy Andrey.

2010-05-06  Ian Beckwith  <ianb@erislabs.net>

	* uzbl_load_url_from_surfraw: fix menu.
	  Thanks to Sumant Oemrawsingh.
	* Fixed tests: deblists google openbsd.
