@@ -114,7 +114,7 @@ Jakob <jakob@pipefour.org>
         elvi: pasearch
 
 Kyle Isom <coder@kyleisom.net>
-        elvi: ddg, openports
+        elvi: cablesearch, ddg, openports
 
 THANKS TO
 
