@@ -1,7 +1,8 @@
 #!/bin/sh
-# elvis: ddg            -- Search the web using duckduckgo (www.duckduckgo.com)
+# elvis: ddg            -- Securely search the web using duckduckgo (www.duckduckgo.com)
 # coder@kyleisom.net 20110105
 # relevant: https://duckduckgo.com/params.html
+# similar to duckduckgo elvi, adds more options and defaults to SSL.
 . surfraw || exit 1
 
 w3_config_hook () {
