@@ -1,3 +1,5 @@
+2011-01-05  Kyle Isom <coder@kyleisom.net>
+        * new elvis: cablesearch, ddg, openports
 2010-12-04  Jakob <jakob@pipefour.org>
 
 	* new elvis: pasearch.
